Implements graphical live-boot installer for the OS
Introduces a complete graphical installation wizard that runs in a new "live boot" mode, allowing the OS to be installed to a disk.

The installer provides a multi-step GUI to guide users through selecting a disk, reviewing the partition layout, and completing the installation. This is enabled by a new GRUB menu entry that passes a `live_boot=1` parameter to the kernel.

Adds the necessary kernel infrastructure to support installation, including:
- A generic block device subsystem with a Virtio driver
- Libraries for GPT partitioning and creating EXT4 and FAT32 filesystems
- A file copy engine with progress tracking
- A bootloader installation module

Also includes comprehensive documentation detailing the installer's architecture and implementation.

--- a/boot/grub/grub.cfg
+++ b/boot/grub/grub.cfg
@@ -15,15 +15,24 @@ terminal_output gfxterm
 # UnixOS boot menu entry
 menuentry "UnixOS" {
     echo "Loading UnixOS kernel..."
-    
+
     # Load kernel with multiboot2
     # For ARM64, we use linux command with EFI stub
     linux /EFI/BOOT/kernel.elf root=/dev/nvme0n1p2 console=ttyS0,115200 console=tty0
-    
+
     # Load initial ramdisk if present
     # initrd /EFI/BOOT/initrd.img
-    
+
     echo "Booting..."
+}
+
+menuentry "UnixOS (Live Boot)" {
+    echo "Loading UnixOS in live boot mode..."
+
+    # Live boot mode with RamFS root
+    linux /EFI/BOOT/kernel.elf live_boot=1 console=ttyS0,115200 console=tty0
+
+    echo "Booting into live mode..."
 }
 
 menuentry "UnixOS (Safe Mode)" {
