Adds installer and ISO build process for x86_64
Ports the graphical OS installer from the ARM64 target to the x86_64 architecture, enabling installation on standard PCs and virtual machines.

This introduces the core components required for installation, including a block device abstraction layer with a VirtIO driver, a library for GPT partitioning, and utilities for creating EXT4 and FAT32 filesystems.

New build scripts are added to compile the kernel with the installer modules and package the result into a bootable ISO image. The boot configuration is updated to support a "live boot" mode that launches the installer.

Additionally, new documentation provides setup instructions for running the x86_64 build in VirtualBox.

--- a/vib-os-x86_64/iso_root/boot/limine.conf
+++ b/vib-os-x86_64/iso_root/boot/limine.conf
@@ -1,16 +1,16 @@
-# Limine Configuration File
-# VibCode x64
-
-# Timeout before autoboot (seconds)
 timeout: 5
 
-# Default boot entry
-default_entry: 1
-
-# ==========================================
-# VibCode x64
-# ==========================================
-
-/Vib-OS
+/vib-OS Live Boot (Installer)
     protocol: limine
     kernel_path: boot():/boot/kernel.elf
+    cmdline: live_boot=1
+
+/vib-OS Normal Boot
+    protocol: limine
+    kernel_path: boot():/boot/kernel.elf
+    cmdline: root=/dev/sda2
+
+/vib-OS Debug Mode  
+    protocol: limine
+    kernel_path: boot():/boot/kernel.elf
+    cmdline: live_boot=1 debug verbose
